lesson_1_k8s_init/k8s/advance/init-ms-otus-lesson-1-redirect.yaml
#The advance task (+5 points) - should be deployed separately
apiVersion: v1
kind: Namespace
metadata:
  name: otus-ms-lesson-1-adv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-checker-adv
  namespace: otus-ms-lesson-1-adv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-checker-adv
  template:
    metadata:
      labels:
        app: health-checker-adv
    spec:
      containers:
        - name: health-checker-adv
          image: mornimf/otus-health-checker-js
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: entrypoint-adv
  namespace: otus-ms-lesson-1-adv
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: health-checker-adv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite-ingress
  namespace: otus-ms-lesson-1-adv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: entrypoint-adv
                port:
                  number: 8000
            path: /otusapp/aleksey.morozov(/|$)(.*)
